// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="one punch"
    key="one punch"
  />
  <GifGrid
    category="dragon ball"
    key="dragon ball"
  />
</Fragment>
`;

exports[`Pruebas sobre GifExpertApp El componente debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
